[gd_scene load_steps=7 format=3 uid="uid://b88wdcxmke5r4"]

[ext_resource type="Script" path="res://level/give_them_cake/give_them_cake.gd" id="1_r1qa1"]
[ext_resource type="Shader" path="res://level/give_them_cake/blur.gdshader" id="2_bh1rm"]
[ext_resource type="Texture2D" uid="uid://bj7yb3qclre7g" path="res://assets/stage/stage.jpeg" id="3_rmnew"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3o1jy"]
shader = ExtResource("2_bh1rm")
shader_parameter/radius = 4.0

[sub_resource type="Gradient" id="Gradient_vs37c"]
offsets = PackedFloat32Array(0, 0.20802, 0.822055, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.52549, 1, 1, 1, 0.52549, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3r76e"]
gradient = SubResource("Gradient_vs37c")

[node name="GiveThemCake" type="Node2D"]
script = ExtResource("1_r1qa1")

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -480.0
offset_right = 960.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 2688.0
offset_bottom = 2176.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
ratio = 1.77

[node name="ColorRect" type="ColorRect" parent="Control2/AspectRatioContainer"]
layout_mode = 2
color = Color(0.364706, 0.686275, 0.807843, 1)

[node name="TextureRect" type="TextureRect" parent="Control2/AspectRatioContainer"]
material = SubResource("ShaderMaterial_3o1jy")
layout_mode = 2
texture = ExtResource("3_rmnew")

[node name="Control" type="Control" parent="Control2/AspectRatioContainer"]
layout_mode = 2

[node name="PointsHolder" type="Control" parent="Control2/AspectRatioContainer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -708.0
offset_top = -403.39
offset_right = -708.0
offset_bottom = -403.39
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(3, 3)

[node name="TextureRect" type="TextureRect" parent="Control2/AspectRatioContainer/Control/PointsHolder"]
layout_mode = 0
offset_left = -162.0
offset_top = 25.0
offset_right = 294.0
offset_bottom = 625.0
scale = Vector2(1, -1)
texture = SubResource("GradientTexture2D_3r76e")

[node name="Points" type="ColorRect" parent="Control2/AspectRatioContainer/Control/PointsHolder"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 300.0
scale = Vector2(1, -1)
color = Color(1, 1, 0.145098, 1)

[node name="5Percent" type="ColorRect" parent="Control2/AspectRatioContainer/Control/PointsHolder"]
layout_mode = 0
offset_left = -10.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = -45.0
color = Color(0.568973, 0.568973, 0.568973, 1)

[node name="Label" type="Label" parent="Control2/AspectRatioContainer/Control/PointsHolder"]
layout_mode = 0
offset_left = 52.5
offset_top = -59.6017
offset_right = 94.5
offset_bottom = -32.6017
text = "5%"

[node name="BirdHolder" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
